enable accessing writer history on smaller screens + fix SVG issues

--- a/packages/app/src/style.css
+++ b/packages/app/src/style.css
@@ -12,3 +12,27 @@ html, body, #root {
   margin: 0;
   padding: 0;
 }
+
+::-webkit-scrollbar {
+  width: 8px; 
+  height: 10px; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 5px; 
+  border: 2px solid transparent; 
+  background-clip: padding-box; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent; 
+}
